src/objects/Z_Task__c/Z_Task__c.object-meta.xml
<CustomObject>
    <label>Task Activities</label>
    <nameField>
        <label>Z Task Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>