src/objects/Z_Task__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>RelatedTo__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>