src/objects/Z_Task__c/fields/APU_Workcenter__c.field-meta.xml
<CustomField>
    <fullName>APU_Workcenter__c</fullName>
    <formula>Case_Extension__r.APU_Workcenter__c</formula>
    <label>APU Workcenter</label>
    <type>Text</type>
</CustomField>