src/objects/Z_Task__c/fields/Case_Extension__c.field-meta.xml
<CustomField>
    <fullName>Case_Extension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Extension</label>
    <referenceTo>Case_Extension__c</referenceTo>
    <relationshipLabel>Task Activities</relationshipLabel>
    <relationshipName>Task_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>