src/objects/Z_Task__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <formula>RelatedTo__r.Case_Number__c</formula>
    <label>CaseNumber</label>
    <type>Text</type>
</CustomField>