src/objects/Z_Task__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Long Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>