src/objects/Z_Task__c/fields/Concierge__c.field-meta.xml
<CustomField>
    <fullName>Concierge__c</fullName>
    <formula>RelatedTo__r.Account_Concierge__c</formula>
    <label>Concierge</label>
    <type>Text</type>
</CustomField>