src/objects/Z_Task__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TASK CREATION</fullName>
            </value>
            <value>
                <fullName>TASK CLOSE</fullName>
            </value>
            <value>
                <fullName>TASK UPDATE</fullName>
            </value>
            <value>
                <fullName>TASK DELETE</fullName>
            </value>
            <value>
                <fullName>TASK COMPLETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>