src/objects/Z_Task__c/fields/Followup_Task1__c.field-meta.xml
<CustomField>
    <fullName>Followup_Task1__c</fullName>
    <label>Followup Task1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Followup Task</fullName>
            </value>
            <value>
                <fullName>Z100 Return to Customer</fullName>
            </value>
            <value>
                <fullName>Z106 Order Review and Completion</fullName>
            </value>
            <value>
                <fullName>Z107 Order Information Required</fullName>
            </value>
            <value>
                <fullName>Z111 Engineering Review Required</fullName>
            </value>
            <value>
                <fullName>Z113 Findings Required</fullName>
            </value>
            <value>
                <fullName>Z114 Pricing Review Required</fullName>
            </value>
            <value>
                <fullName>Z115 Estimate Review Required</fullName>
            </value>
            <value>
                <fullName>Z116 Warranty Review Required</fullName>
            </value>
            <value>
                <fullName>Z118 Purchasing Action Required</fullName>
            </value>
            <value>
                <fullName>Z121 Final Buyoff Required</fullName>
            </value>
            <value>
                <fullName>Z122 Scrap Action/Review Required</fullName>
            </value>
            <value>
                <fullName>Z126 Exchange approved</fullName>
            </value>
            <value>
                <fullName>Z127 Exchange rejected</fullName>
            </value>
            <value>
                <fullName>Z128 Ready for Release</fullName>
            </value>
            <value>
                <fullName>Z129 OK to Proceed</fullName>
            </value>
            <value>
                <fullName>Z135 Escalation to CSR</fullName>
            </value>
            <value>
                <fullName>Z136 CUSTOMER FOLLOW UP REQUIRED</fullName>
            </value>
            <value>
                <fullName>Z141 Shop Action Required</fullName>
            </value>
            <value>
                <fullName>Z144 Phone Call to Customer</fullName>
            </value>
            <value>
                <fullName>Z145 Send RAI Letter to Customer</fullName>
            </value>
            <value>
                <fullName>Z146 Cust Follow Up Required - GAT0</fullName>
            </value>
            <value>
                <fullName>Z149 Military Plant Clearance</fullName>
            </value>
            <value>
                <fullName>Z150 Warranty Decision Required</fullName>
            </value>
            <value>
                <fullName>Z151 Prepayment Order followup for payment</fullName>
            </value>
            <value>
                <fullName>Z156 DOD Need Contract Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>