src/objects/Z_Task__c/fields/Followuptask__c.field-meta.xml
<CustomField>
    <fullName>Followuptask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followuptask</label>
    <type>Checkbox</type>
</CustomField>