src/objects/Z_Task__c/fields/Language_Key__c.field-meta.xml
<CustomField>
    <fullName>Language_Key__c</fullName>
    <label>Language Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>