src/objects/Z_Task__c/fields/Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Long_Text__c</fullName>
    <label>Long Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>