src/objects/Z_Task__c/fields/Long_Text_Summary__c.field-meta.xml
<CustomField>
    <fullName>Long_Text_Summary__c</fullName>
    <label>Long Text Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>