src/objects/Z_Task__c/fields/New_Followup_Task__c.field-meta.xml
<CustomField>
    <fullName>New_Followup_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Followup Task</label>
    <type>Checkbox</type>
</CustomField>