src/objects/Z_Task__c/fields/New_Long_Text__c.field-meta.xml
<CustomField>
    <fullName>New_Long_Text__c</fullName>
    <label>New Long Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>