src/objects/Z_Task__c/fields/Notification_Number__c.field-meta.xml
<CustomField>
    <fullName>Notification_Number__c</fullName>
    <formula>HYPERLINK( &apos;https://arpwas.honeywell.com/sap/bc/gui/sap/its/webgui?=&amp;%7etransaction=IW53&amp;%7eokcode=/00&amp;=&amp;RIWO00-QMNUM=322484009&amp;sap-client=900&amp;sap-language=ENhttps://arpwas.honeywell.com/sap/bc/gui/sap/its/webgui?=&amp;%7etransaction=IW53&amp;%7eokcode=/00&amp;=&amp;RIWO00-QMNUM=&apos; + RelatedTo__r.Repair_Notification_Number__c+&apos;&amp;sap-client=900&amp;sap-language=EN&apos;, RelatedTo__r.Repair_Notification_Number__c )</formula>
    <label>Notification Number</label>
    <type>Text</type>
</CustomField>