src/objects/Z_Task__c/fields/Other_Short_Text__c.field-meta.xml
<CustomField>
    <fullName>Other_Short_Text__c</fullName>
    <label>Other Short Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>