src/objects/Z_Task__c/fields/Reason_for_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Hold__c</fullName>
    <label>Reason for Hold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8130 TAG</fullName>
            </value>
            <value>
                <fullName>A/C Details</fullName>
            </value>
            <value>
                <fullName>Account Change: Bill To</fullName>
            </value>
            <value>
                <fullName>Account Change: Carrier</fullName>
            </value>
            <value>
                <fullName>Account Change: End User Details</fullName>
            </value>
            <value>
                <fullName>Account Change: Extend Sales Org</fullName>
            </value>
            <value>
                <fullName>Account Change: Name/Address</fullName>
            </value>
            <value>
                <fullName>Account Change: Payer</fullName>
            </value>
            <value>
                <fullName>Account Change: Ship To</fullName>
            </value>
            <value>
                <fullName>Account Creation - Bill To</fullName>
            </value>
            <value>
                <fullName>Account Creation - Ship To</fullName>
            </value>
            <value>
                <fullName>Account Creation - Sold To</fullName>
            </value>
            <value>
                <fullName>Account Edit - Bill To</fullName>
            </value>
            <value>
                <fullName>Account Edit - Ship To</fullName>
            </value>
            <value>
                <fullName>Account Edit - Sold To</fullName>
            </value>
            <value>
                <fullName>ACES Issues</fullName>
            </value>
            <value>
                <fullName>Add customer sold-to</fullName>
            </value>
            <value>
                <fullName>Add Flowdown</fullName>
            </value>
            <value>
                <fullName>Add Part Number to Contract</fullName>
            </value>
            <value>
                <fullName>Advise on Disposition (RAI / SCRAP)</fullName>
            </value>
            <value>
                <fullName>Aircraft Details</fullName>
            </value>
            <value>
                <fullName>Amended PO</fullName>
            </value>
            <value>
                <fullName>Amended PO - Carrier/Shipping Info</fullName>
            </value>
            <value>
                <fullName>Amended PO - Carrier Confirmation</fullName>
            </value>
            <value>
                <fullName>Amended PO - Delivery Date</fullName>
            </value>
            <value>
                <fullName>Amended PO - Delivery Date Confirmation</fullName>
            </value>
            <value>
                <fullName>Amended PO - End User Details</fullName>
            </value>
            <value>
                <fullName>Amended PO - Forwarding Agent</fullName>
            </value>
            <value>
                <fullName>Amended PO - Honeywell Address</fullName>
            </value>
            <value>
                <fullName>Amended PO - Incorrect Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>