src/objects/Z_Task__c/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <formula>RelatedTo__r.Region__c</formula>
    <label>Region Name</label>
    <type>Text</type>
</CustomField>