src/objects/Z_Task__c/fields/RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>RelatedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Task Activities</relationshipLabel>
    <relationshipName>Z_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>