src/objects/Z_Task__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>