src/objects/Z_Task__c/fields/Requote_Reason__c.field-meta.xml
<CustomField>
    <fullName>Requote_Reason__c</fullName>
    <description>Dependent field on the Short Text field</description>
    <label>Requote Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSR - INCORRECT OR NO CONTRACT SELECTED</fullName>
            </value>
            <value>
                <fullName>CSR – PARTIAL (OR SPLIT) BILLING INCORRECT</fullName>
            </value>
            <value>
                <fullName>CSR - WARRANTY UPDATED ON EQUIPMENT RECORD</fullName>
            </value>
            <value>
                <fullName>CSR - WRONG TIER LEVEL SELECTED</fullName>
            </value>
            <value>
                <fullName>CUSTOMER - ADDITIONAL SB REQUESTED</fullName>
            </value>
            <value>
                <fullName>CUSTOMER – INCORRECT SB CHARGED</fullName>
            </value>
            <value>
                <fullName>CUSTOMER - WARRANTY REQUESTED NOW</fullName>
            </value>
            <value>
                <fullName>CUSTOMER - WORKSCOPE CHANGE</fullName>
            </value>
            <value>
                <fullName>CUSTOMER - WRONG CONTRACT SELECTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>