src/objects/Z_Task__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>