src/objects/Z_Task__c/fields/SAP_ZTask_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_ZTask_Number__c</fullName>
    <label>SAP ZTask Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>