src/objects/Z_Task__c/fields/Short_Text2__c.field-meta.xml
<CustomField>
    <fullName>Short_Text2__c</fullName>
    <formula>IF( TEXT( Sub_Type__c ) == &apos;Other&apos; , Other_Short_Text__c , Short_Text__c )</formula>
    <label>Short Text (Final)</label>
    <type>Text</type>
</CustomField>