src/objects/Z_Task__c/fields/Short_Text__c.field-meta.xml
<CustomField>
    <fullName>Short_Text__c</fullName>
    <label>Short Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>