src/objects/Z_Task__c/fields/SI_SAP_Task__c.field-meta.xml
<CustomField>
    <fullName>SI_SAP_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SI_SAP_Task</label>
    <type>Checkbox</type>
</CustomField>