src/objects/Z_Task__c/fields/Sub_Class__c.field-meta.xml
<CustomField>
    <fullName>Sub_Class__c</fullName>
    <formula>TEXT(RelatedTo__r.Sub_Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Class</label>
    <type>Text</type>
</CustomField>