src/objects/Z_Task__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Short Text Template</description>
    <label>Short Text Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>RAI - UFR No response</fullName>
            </value>
            <value>
                <fullName>RAI - Quote Denied</fullName>
            </value>
            <value>
                <fullName>RAI - Quote No response</fullName>
            </value>
            <value>
                <fullName>RAI - Customer Requested</fullName>
            </value>
            <value>
                <fullName>Resolve Unknown Customer</fullName>
            </value>
            <value>
                <fullName>Exchange Available</fullName>
            </value>
            <value>
                <fullName>PO review Pending</fullName>
            </value>
            <value>
                <fullName>R&amp;OI – No Discrepancies Identified</fullName>
            </value>
            <value>
                <fullName>R&amp;OI – PO Workscope Quote Reqd</fullName>
            </value>
            <value>
                <fullName>PO review complete</fullName>
            </value>
            <value>
                <fullName>Need Missing PO</fullName>
            </value>
            <value>
                <fullName>Need Missing Information</fullName>
            </value>
            <value>
                <fullName>Customer Dispute Price - Please review</fullName>
            </value>
            <value>
                <fullName>Please send Quote to Customer</fullName>
            </value>
            <value>
                <fullName>R&amp;OI – PO Sufficiently Priced</fullName>
            </value>
            <value>
                <fullName>R&amp;OI – PO Workscope and Price Wrong</fullName>
            </value>
            <value>
                <fullName>R&amp;OI – PO Workscope Incorrect</fullName>
            </value>
            <value>
                <fullName>R&amp;OI – PO Workscope Wrong Price OK</fullName>
            </value>
            <value>
                <fullName>R&amp;OI – Workscope Price required</fullName>
            </value>
            <value>
                <fullName>Missing Price - Please Price</fullName>
            </value>
            <value>
                <fullName>Scrap - Customer requested</fullName>
            </value>
            <value>
                <fullName>Exchange price needed</fullName>
            </value>
            <value>
                <fullName>Customer Approved Exchange</fullName>
            </value>
            <value>
                <fullName>Customer Rejected Exchange</fullName>
            </value>
            <value>
                <fullName>Create Sales Order</fullName>
            </value>
            <value>
                <fullName>Need Missing Paperwork</fullName>
            </value>
            <value>
                <fullName>UFR - No quote Required</fullName>
            </value>
            <value>
                <fullName>FYI Quote Approved</fullName>
            </value>
            <value>
                <fullName>Contract Flate Rate- No Quote Required</fullName>
            </value>
            <value>
                <fullName>Quote Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>