src/objects/Z_Task__c/fields/Task_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Task_Changed_By__c</fullName>
    <label>Task Changed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>