src/objects/Z_Task__c/fields/Task_Changed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Task_Changed_Date_Time__c</fullName>
    <label>Task Changed Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>