src/objects/Z_Task__c/fields/Task_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Task_Created_Date_Time__c</fullName>
    <label>Task Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>