src/objects/Z_Task__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <formula>RelatedTo__r.Contact.FirstName +&apos; &apos;+ RelatedTo__r.Last_Name__c</formula>
    <label>To</label>
    <type>Text</type>
</CustomField>