src/objects/Z_Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Z100 Return to Customer</fullName>
            </value>
            <value>
                <fullName>Z101 Resolve Unknown Customer</fullName>
            </value>
            <value>
                <fullName>Z102 Resolve Unknown Material</fullName>
            </value>
            <value>
                <fullName>Z103 Product Manufacturing Approval Required</fullName>
            </value>
            <value>
                <fullName>Z104 Exchange Available</fullName>
            </value>
            <value>
                <fullName>Z105 Review Repeat Return Candidate</fullName>
            </value>
            <value>
                <fullName>Z106 Order Review and Completion</fullName>
            </value>
            <value>
                <fullName>Z107 Order Information Required</fullName>
            </value>
            <value>
                <fullName>Z108 Review Customer Request Date</fullName>
            </value>
            <value>
                <fullName>Z109 Initial Evaluation Required</fullName>
            </value>
            <value>
                <fullName>Z110 Customer Quality Investigation Required</fullName>
            </value>
            <value>
                <fullName>Z111 Engineering Review Required</fullName>
            </value>
            <value>
                <fullName>Z112 Production Resource Tool Required</fullName>
            </value>
            <value>
                <fullName>Z113 Findings Required</fullName>
            </value>
            <value>
                <fullName>Z114 Pricing Review Required</fullName>
            </value>
            <value>
                <fullName>Z115 Estimate Review Required</fullName>
            </value>
            <value>
                <fullName>Z116 Warranty Review Required</fullName>
            </value>
            <value>
                <fullName>Z117 Product Quality Deficiency Record (PQDR)</fullName>
            </value>
            <value>
                <fullName>Z118 Purchasing Action Required</fullName>
            </value>
            <value>
                <fullName>Z119 Quality Review Required</fullName>
            </value>
            <value>
                <fullName>Z120 Inspection Required</fullName>
            </value>
            <value>
                <fullName>Z121 Final Buyoff Required</fullName>
            </value>
            <value>
                <fullName>Z122 Scrap Action/Review Required</fullName>
            </value>
            <value>
                <fullName>Z123 Export Review Required</fullName>
            </value>
            <value>
                <fullName>Z124 Shipping Container Required</fullName>
            </value>
            <value>
                <fullName>Z125 Freestock/Expense Material Required</fullName>
            </value>
            <value>
                <fullName>Z126 Exchange approved</fullName>
            </value>
            <value>
                <fullName>Z127 Exchange rejected</fullName>
            </value>
            <value>
                <fullName>Z128 Ready for Release</fullName>
            </value>
            <value>
                <fullName>Z129 OK to Proceed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>