src/objects/Z_Task__c/fields/Z_Task__c.field-meta.xml
<CustomField>
    <fullName>Z_Task__c</fullName>
    <formula>SAP_ZTask_Number__c</formula>
    <label>Z Task</label>
    <type>Text</type>
</CustomField>