src/objects/Z_Task__c/recordTypes/Task_Activities_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Task_Activities_Record_Type</fullName>
    <active>true</active>
    <label>Task Activities Record Type</label>
</RecordType>