src/objects/Z_Task__c/recordTypes/ZTask_Closed_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>ZTask_Closed_Record_Type</fullName>
    <active>true</active>
    <label>ZTask Closed Record Type</label>
</RecordType>