src/objects/Z_Task__c/listViews/Aging_issue.listView-meta.xml
<ListView>
    <fullName>Aging_issue</fullName>
    <booleanFilter>(1 AND 2 AND 3 AND 9 AND 10) AND( (4 AND 5) OR (6 AND 7) OR (8 AND 5 AND (NOT 7)))</booleanFilter>
    <columns>NAME</columns>
    <columns>HRTS__c</columns>
    <columns>Notification_Number__c</columns>
    <columns>Task_Age_In_Hours__c</columns>
    <columns>Task_Created_Date_Time__c</columns>
    <columns>Repair_Location__c</columns>
    <columns>Account_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Short_Text2__c</columns>
    <columns>Task_Age__c</columns>
    <columns>CaseNumber__c</columns>
    <columns>Priority__c</columns>
    <columns>APU_Workcenter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GCE_Customer_Segment__c</field>
        <operation>contains</operation>
        <value>CP &amp; Owner/Operator,Airline</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Short_Text2__c</field>
        <operation>notContain</operation>
        <value>APU,F22,F-22,Core,ANGELITA ZUFELT,KAPIL RATHI,GRACE MONTEZ</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Z101,Z104,Z106,Z107,Z135,Z144</value>
    </filters>
    <filters>
        <field>Repair_Location__c</field>
        <operation>notContain</operation>
        <value>3202,1007,1045,1404,3203,3031,3300,2030,1087,1008,1039,1064,1073</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Z114</value>
    </filters>
    <filters>
        <field>Repair_Location__c</field>
        <operation>contains</operation>
        <value>1052,1057,1062,1093,1103,1540,1600,2040,4142,4143,4148,5010,5253</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Z115</value>
    </filters>
    <filters>
        <field>Account_Name__c</field>
        <operation>notContain</operation>
        <value>Honeywell Emp</value>
    </filters>
    <filters>
        <field>APU_Workcenter__c</field>
        <operation>notContain</operation>
        <value>TFMAIN,TPMAIN,CFMAIN,HTMAIN,APMAIN,A1</value>
    </filters>
    <label>Aging issue</label>
    <language>en_US</language>
</ListView>