src/objects/Z_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CaseNumber__c</columns>
    <columns>Distribution_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Hughes</value>
    </filters>
    <label>All</label>
</ListView>