src/objects/Z_Task__c/listViews/All_CSO_R_O_Tasks_APAC.listView-meta.xml
<ListView>
    <fullName>All_CSO_R_O_Tasks_APAC</fullName>
    <columns>Task_Age_In_Hours__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>CaseNumber__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_SBU__c</columns>
    <columns>Account_Type__c</columns>
    <columns>APU_Workcenter__c</columns>
    <columns>Assigned_POD__c</columns>
    <columns>Concierge__c</columns>
    <columns>Comments__c</columns>
    <columns>Short_Text__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Z101,Z104,Z106,Z107,Z114,Z115,Z135,Z136,Z144,Z146,Z156,Z151</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Region_Name__c</field>
        <operation>contains</operation>
        <value>Asia</value>
    </filters>
    <label>All CSO R&amp;O Tasks - APAC</label>
</ListView>